Completamento varie colonne e inserimento colori sfondo.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,117 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="12col.css">
+    <link rel="stylesheet" href="12bool.css">
     <link rel="stylesheet" href="master.css">
   </head>
   <body>
+    <main>
+      <div class="container">
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+      </div>
 
+      <!-- container colonna unica -->
+      <div class="container">
+        <div class="col-12">
+          <p>12 col</p>
+        </div>
+      </div>
+
+      <!-- container 1 colonne da 8 2 colonne da 2 -->
+      <div class="container">
+        <div class="col-8">
+          <p>8 col</p>
+        </div>
+        <div class="col-2">
+          <p>2 col</p>
+        </div>
+        <div class="col-2">
+          <p>2 col</p>
+        </div>
+      </div>
+
+      <!-- container -->
+      <div class="container">
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+        <div class="col-2">
+          <p>2 col</p>
+        </div>
+        <div class="col-2">
+          <p>2 col</p>
+        </div>
+        <div class="col-6">
+          <p>6 col</p>
+        </div>
+        <div class="col-1">
+          <p>1 col</p>
+        </div>
+      </div>
+
+      <!-- container con piu colonne -->
+      <div class="container">
+        <div class="col-6 padding">
+          <div class="col-2 color">
+            <p>Nested</p>
+            <p>2 col</p>
+          </div>
+          <div class="col-2 color">
+            <p>Nested</p>
+            <p>2 col</p>
+          </div>
+          <div class="col-8 color">
+            <p>Nested</p>
+            <p>2 col</p>
+          </div>
+        </div>
+
+        <div class="col-6 padding">
+          <div class="col-6 color">
+            <p>Nested</p>
+            <p>6 col</p>
+          </div>
+          <div class="col-6 color">
+            <p>Nested</p>
+            <p>6 col</p>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
